refactor: change transaction format to not allow missing a part of the transactional format, fixed user registration
